--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -90,10 +90,12 @@ html {
 }
 
 .container {
-    max-width: 1200px;
+    width: 1200px;
     margin: 0px auto;
     padding-left: 15px;
     padding-right: 15px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 section :nth-child(5) {
@@ -251,8 +253,7 @@ section :nth-child(5) {
     fill: var(--color-text-blue);
 }
 
-.face {
-    background-color: var(--background-color-grey) 50%;
+.face {   
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
@@ -260,7 +261,10 @@ section :nth-child(5) {
     max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
-    background-image: url(../images/backgrond-photo1.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, .4) 40%, rgba(47, 48, 58, .4) 40%), url(../images/backgrond-photo1.jpg);
+    background-size: cover;
+    background-position: center;
+
 }
 
 .title-text {
@@ -334,6 +338,9 @@ section:nth-child(2) {
 
 .peculiarities-icon-background-color {
     background-color: rgba(245, 244, 250, 1);
+    width: 100%;
+    height: 120px;
+    display: flex;
 }
 
 .icon-antena {
@@ -643,10 +650,18 @@ section:nth-child(2) {
 
 .footer {
     background-color: var(--background-color-grey);
-    /* display: flex; */
+    display: flex;
     align-items: center;
     padding-top: 60px; 
     padding-bottom: 60px;  
+}
+
+.footer-cantainer1 {
+
+}
+
+.footer-container2 {
+    margin-left: 70px;
 }
 
 .address {
@@ -768,7 +783,11 @@ section:nth-child(2) {
     fill: #fff;
 }
 
-.social-link-icon-item :hover {
+.social-link-icon:focus {
+    border-color: var(--color-text-blue);
+}
+
+.social-link-icon-item:hover {
     background-color: var(--color-text-blue);
 }
 
@@ -779,10 +798,10 @@ section:nth-child(2) {
 .projects-button-list {
     margin-bottom: 50px;
     display: flex;
-
 }
 
 .projects-button {
+    height: 54px;
     align-content: center;
     text-align: center;
     margin-right: auto;
@@ -801,8 +820,6 @@ section:nth-child(2) {
     font-size: 16px;
     line-height: 1.6;
     margin-right: 8px;
-    
-    
     padding: 6px 22px;
 }
 
@@ -813,10 +830,11 @@ section:nth-child(2) {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1);
 }
 
-.portfolio-button :focus {
+.portfolio-button:focus {
     background-color: #2196F3;
     color: #fff;
     border: 1px solid transparent;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1);
 }
 
 .portfolio-projects-list {
@@ -850,10 +868,26 @@ section:nth-child(2) {
     margin-bottom: 30px;
 }
 
+.box:hover {
+    box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.box:focus {
+    box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .last-box {
     margin-right: 30px;
     flex-wrap: wrap;
     margin-left: auto;
+}
+
+.last-box:hover {
+    box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.last-box:focus {
+    box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .box:nth-child(3n) {
