--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -337,6 +337,9 @@ section:nth-child(2) {
 }
 
 .peculiarities-icon-background-color {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: rgba(245, 244, 250, 1);
     width: 100%;
     height: 120px;
@@ -344,39 +347,23 @@ section:nth-child(2) {
 }
 
 .icon-antena {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 70px;
     height: 70px;
-    margin: 25px 100px;
 }
 
 .icon-clock {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 70px;
     height: 70px;
-    margin: 25px 100px;
 }
 
 .diagram-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 70px;
     height: 70px;
-    margin: 25px 100px;
 }
 
 .astronaut-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 70px;
     height: 70px;
-    margin: 25px 100px;
 }
 
 .peculiarities-title {
@@ -438,6 +425,10 @@ section:nth-child(2) {
     height: 44px;
     margin-top: 16px;
     margin-bottom: 30px;
+}
+
+.employee-item:not(:last-child) {
+    margin-right: 10px;
 }
 
 .employee-item :hover {
@@ -643,12 +634,10 @@ section:nth-child(2) {
 
 .clients-list :hover {
     fill: var(--color-text-blue);
-    border: 1px solid #2196F3;
 }
 
 .clients-list :focus {
     fill: var(--color-text-blue);
-    border: 1px solid #2196F3;
 }
 
 .client-logo-item {
@@ -663,23 +652,28 @@ section:nth-child(2) {
     cursor: pointer;
 }
 
-.client-logo-item :hover {
-    border: #F5F4FA;
+.client-logo-item:hover {
     cursor: pointer;
+    fill: var(--color-text-blue);
+    border: 1px solid var(--color-text-blue);
 }
 
-.client-logo-item :focus {
-    border: 1px solid #2196F3;
+.client-logo-item:focus {
     cursor: pointer;
+    fill: var(--color-text-blue);
+    border: 1px solid var(--color-text-blue);
 }
 
 .client-logo-item:not(:last-child) {
     margin-right: 30px;
 }
 
+.client-ligo-link:hover {
+    border: 1px solid var(--color-text-blue);
+}
+
 .client-ligo-link :focus {
     fill: var(--color-text-blue);
-    border: 1px solid #2196F3;
 }
 
 .client-logo-icon {
@@ -693,10 +687,6 @@ section:nth-child(2) {
     align-items: center;
     padding-top: 60px; 
     padding-bottom: 60px;  
-}
-
-.footer-cantainer1 {
-
 }
 
 .footer-container2 {
@@ -747,6 +737,9 @@ section:nth-child(2) {
 
 .social-links-text {
     color: #fff;
+    font-weight: 700;
+    font-size: 14px;
+    letter-spacing: 0.03em;
 }
 
 .social-links {
@@ -858,7 +851,6 @@ section:nth-child(2) {
 /* portfolio.css */
 
 .projects-button-list {
-    margin-bottom: 50px;
     display: flex;
 }
 
@@ -869,6 +861,7 @@ section:nth-child(2) {
     margin-right: auto;
     margin-left: auto;
     justify-content: space-around;
+    margin-bottom: 50px;
 }
 
 .portfolio-button {
