Changed my 5'th hw

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -72,11 +72,12 @@ address {
 :root {
     --font-family-relaway: 'Raleway', sans-serif;
     --font-family-roboto: 'Roboto', sans-serif;
+
     --color-text-dark: #212121;
     --color-text-grey: #757575;
-    --background-color-grey: #2F303A;
     --color-text-blue: #2196F3;
-
+    
+    --background-color-grey: #2F303A;
     --icon-text-grey: #AFB1B8;
 }
 
@@ -151,30 +152,40 @@ section :nth-child(5) {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.17;
-    color: var(--color-text-dark);
     letter-spacing: 0.02em;
+
+    color: var(--color-text-dark);
+    
     min-width: 49px;
     height: 16px;
+
     padding-right: 50px;
+
     display: flex;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .pages:hover {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.17;
+    content: '';
+    min-width: 44px;
+    color: var(--color-text-blue);
+}
+
+.pages:active {
+    
+}
+
+.pages:focus {
     color: #2196F3;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.17;
 }
 
-.pages :focus {
-    color: #2196F3;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.17;
-}
-
-.pages :active {
+.pages:active {
     color: #2196F3;
     font-weight: 500;
     font-size: 14px;
@@ -192,7 +203,8 @@ section :nth-child(5) {
     font-size: 14px;
     line-height: 1.17;
     letter-spacing: 0.02em;
-    padding-right: 50px;   
+    padding-right: 50px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .info:hover {
@@ -200,8 +212,7 @@ section :nth-child(5) {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.17;
-    fill: var(--color-text-blue);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: var(--color-text-blue);  
 }
 
 .info:focus {
@@ -216,6 +227,10 @@ section :nth-child(5) {
     fill: var(--color-text-blue);
 }
 
+.info-link {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .info-link:hover {
     fill: var(--color-text-blue);
     color: var(--color-text-blue);
@@ -225,7 +240,7 @@ section :nth-child(5) {
     margin-right: 10px;
     fill: currentColor;
     height: 16px;
-    width: 20px;    
+    width: 20px;
 }
 
 .envelope-icon:hover {
@@ -301,7 +316,7 @@ section :nth-child(5) {
 
 }
 
-.button :hover {
+.button:hover {
     background-color: #188CE8;
     border: 1px solid transparent;
     border-radius: 4px;
@@ -425,6 +440,13 @@ section:nth-child(2) {
     z-index: 1;
     bottom: 4px;
 
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 
     color: rgba(255, 255, 255, 1);
     background-color: rgba(47, 48, 58, 0.8);
@@ -457,7 +479,7 @@ section:nth-child(2) {
     margin-bottom: 30px;
     margin-right: 10px;
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .employee-item :hover {
@@ -474,6 +496,8 @@ section:nth-child(2) {
     height: 100%;
     border: 1px solid transparent;
     border-radius: 50%;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .inst-source:hover {
@@ -493,7 +517,6 @@ section:nth-child(2) {
 
     width: 20px;
     height: 20px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .instagram-icon-1:hover {
@@ -510,6 +533,7 @@ section:nth-child(2) {
     height: 100%;
     border: 1px solid transparent;
     border-radius: 50%;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .twitter-source:hover {
@@ -529,8 +553,6 @@ section:nth-child(2) {
     height: 20px;
 
     fill: currentColor;
-
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .twitter-icon-1:hover {
@@ -548,6 +570,7 @@ section:nth-child(2) {
     height: 100%;
     
     border-radius: 50%;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -587,6 +610,7 @@ section:nth-child(2) {
     width: 100%;
     height: 100%;
     border-radius: 50%;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -780,6 +804,7 @@ section:nth-child(2) {
     display: flex;
 }
 
+
 .social-link-icon-item:not(:last-child) {
     margin-right: 10px;
 }
@@ -788,6 +813,7 @@ section:nth-child(2) {
     fill: #F5F4FA;
     width: 20px;
     height: 20px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -795,7 +821,7 @@ section:nth-child(2) {
     margin-right: 10px;
 }
 
-.inst-link-icon {
+.social-link-icon-source {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -804,83 +830,16 @@ section:nth-child(2) {
     border: 1px solid transparent;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.inst-link-icon:hover {
-    background-color: var(--color-text-blue);
-
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.inst-link-icon:focus {
+    
+
+.social-link-icon-source:hover {
     background-color: var(--color-text-blue);
 }
 
-.twitt-link-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    width: 100%;
-    height: 100%;
-    border: 1px solid transparent;
-    border-radius: 50%;
-
-    background-color: rgba(255, 255, 255, 0.1);
-
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.twitt-link-icon:hover {
-    background-color: var(--color-text-blue);
-} 
-
-.twitt-link-icon:focus {
-    background-color: var(--color-text-blue);
-} 
-
-.facebook-link-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    width: 100%;
-    height: 100%;
-    border: 1px solid transparent;
-    border-radius: 50%;
-
-    background-color: rgba(255, 255, 255, 0.1);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.facebook-link-icon:hover {
-    background-color: var(--color-text-blue);
-} 
-
-.facebook-link-icon:focus {
-    background-color: var(--color-text-blue);
-} 
-
-.linkedin-link-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    width: 100%;
-    height: 100%;
-    border: 1px solid transparent;
-    border-radius: 50%;
-
-    background-color: rgba(255, 255, 255, 0.1);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.linkedin-link-icon:hover {
-    background-color: var(--color-text-blue);
-}
-
-.linkedin-link-icon:focus {
+.social-link-icon-source:focus {
     background-color: var(--color-text-blue);
 }
 
@@ -889,12 +848,6 @@ section:nth-child(2) {
     height: 44px;
     margin-top: 16px;
     margin-bottom: 30px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
-.social-link-icon {
-    fill: #fff;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
@@ -1060,39 +1013,48 @@ section:nth-child(2) {
 --------------/* modal-window */------------
 
 .backdrop {
-    width: 100%;
-    height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
-    background-color: #212121;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+
+    background-color: rgba(0, 0, 0, 0.1);
+
+    width: 100%;
+    height: 1000000px;
 }
 
 .modal {
-    position: fixed;
-    z-index: 2;
     width: 528px;
-    height: 581px;
-    background-color: #FFFFFF;
-    border-radius: 4px;
+    min-height: 581px;
+
+    position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+
+    border-radius: 4px;
+
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .close-button {
     position: absolute;
     top: 8px;
     right: 8px;
-    border-radius: 50%;
+
     width: 30px;
     height: 30px;
+
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #fff;
-    cursor: pointer;
+
+    border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
+
+    background-color: transparent;
+    
+    cursor: pointer;
 }
 
 .close-button-icon {
@@ -1105,3 +1067,4 @@ section:nth-child(2) {
     visibility: hidden;
     pointer-events: none;
 }
+
