--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -993,9 +993,13 @@ section:nth-child(2) {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.last-box:hover .overlay{
+    cursor: pointer;
+    transform: translateY(0);
+}
+
 .last-box:hover {
     box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16);
-    cursor: pointer;
 }
 
 .last-box:focus {
@@ -1012,14 +1016,15 @@ section:nth-child(2) {
 
 --------------/* modal-window */------------
 
-.backdrop {
+.backdrop {     
     position: fixed;
     top: 0;
+    left: 0;
 
     background-color: rgba(0, 0, 0, 0.1);
 
     width: 100%;
-    height: 1000000px;
+    height: 100%;
 }
 
 .modal {
@@ -1035,6 +1040,8 @@ section:nth-child(2) {
 
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+
 }
 
 .close-button {
