--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -174,9 +174,11 @@ section :nth-child(5) {
     color: var(--color-text-blue);
 }
 
-.pages:active {
-    
+.pages:hover .overlay-border {
+    transform: translateY(0);
+    visibility: visible;
 }
+
 
 .pages:focus {
     color: #2196F3;
@@ -191,6 +193,50 @@ section :nth-child(5) {
     font-size: 14px;
     line-height: 1.17;
 }
+
+.overlay-border {
+    position: absolute;
+    width: 48px;
+    top: 75px;
+    
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    height: 4px;
+    background-color: var(--color-text-blue);
+    border-radius: 2px;
+    visibility: hidden;
+}           
+
+.overlay-border.second {
+    position: absolute;
+    width: 75px;
+    top: 75px;
+    
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    height: 4px;
+    background-color: var(--color-text-blue);
+    border-radius: 2px;
+    visibility: hidden;
+}           
+
+.overlay-border.third {
+    position: absolute;
+    width: 67px;
+    top: 75px;
+    
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    height: 4px;
+    background-color: var(--color-text-blue);
+    border-radius: 2px;
+    visibility: hidden;
+}           
+
+
 
 .info-body {
     margin-left: auto;
@@ -272,16 +318,19 @@ section :nth-child(5) {
 
 .face {   
     text-align: center;
+
     padding-top: 200px;
     padding-bottom: 200px;
     height: 600px;
     max-width: 1600px;
+
     margin-left: auto;
     margin-right: auto;
     background-image: linear-gradient(to right, rgba(47, 48, 58, .4) 40%, rgba(47, 48, 58, .4) 40%), url(../images/backgrond-photo1.jpg);
+
     background-size: cover;
     background-position: center;
-
+    z-index: 1;
 }
 
 .title-text {
@@ -473,7 +522,10 @@ section:nth-child(2) {
     margin-bottom: 30px;
     margin-right: 10px;
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.employee-item:last-child {
+    margin-right: 0;
 }
 
 .employee-item :hover {
@@ -490,8 +542,7 @@ section:nth-child(2) {
     height: 100%;
     border: 1px solid transparent;
     border-radius: 50%;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .inst-source:hover {
@@ -565,7 +616,6 @@ section:nth-child(2) {
     
     border-radius: 50%;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .facebook-source:hover {
@@ -585,7 +635,6 @@ section:nth-child(2) {
     height: 20px;
 
     fill: currentColor;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .facebook-icon-1:hover {
@@ -605,7 +654,6 @@ section:nth-child(2) {
     height: 100%;
     border-radius: 50%;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .linkedin-source:hover {
@@ -625,8 +673,7 @@ section:nth-child(2) {
 
     width: 20px;
     height: 20px;
-
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+}
 
 .linkedin-icon-1:hover {
     fill: #fff;
@@ -956,7 +1003,7 @@ section:nth-child(2) {
     background: rgba(33, 150, 243, 0.9);
 
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .box:hover {
@@ -1007,8 +1054,6 @@ section:nth-child(2) {
     margin-right: 0;
 }
 
---------------/* modal-window */------------
-
 .modal-container {   
     position: fixed;
     top: 0;
@@ -1018,6 +1063,8 @@ section:nth-child(2) {
 
     width: 100%;
     height: 100%;
+
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -1033,8 +1080,6 @@ section:nth-child(2) {
 
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);;
-
 }
 
 .close-button {
@@ -1066,5 +1111,7 @@ section:nth-child(2) {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
-
+
