--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -175,23 +175,41 @@ section :nth-child(5) {
 }
 
 .pages:hover .overlay-border {
-    transform: translateY(0);
     visibility: visible;
 }
 
-
 .pages:focus {
+    color: var(--color-text-blue);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.17;
+}
+
+.pages:visited {
     color: #2196F3;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.17;
 }
 
-.pages:active {
+.pages:active .overlay {
     color: #2196F3;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.17;
+}
+
+.pages-studio-link {
+    color: var(--color-text-blue);
+}
+
+.pages-portfolio-link {
+    color: var(--color-text-blue);
+}
+
+.pages-contacts-link {
+    color: var(--color-text-blue);
+
 }
 
 .overlay-border {
@@ -199,13 +217,11 @@ section :nth-child(5) {
     width: 48px;
     top: 75px;
     
-    transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     height: 4px;
     background-color: var(--color-text-blue);
     border-radius: 2px;
-    visibility: hidden;
 }           
 
 .overlay-border.second {
@@ -213,13 +229,11 @@ section :nth-child(5) {
     width: 75px;
     top: 75px;
     
-    transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     height: 4px;
     background-color: var(--color-text-blue);
     border-radius: 2px;
-    visibility: hidden;
 }           
 
 .overlay-border.third {
@@ -542,7 +556,7 @@ section:nth-child(2) {
     height: 100%;
     border: 1px solid transparent;
     border-radius: 50%;
-    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .inst-source:hover {
@@ -578,7 +592,7 @@ section:nth-child(2) {
     height: 100%;
     border: 1px solid transparent;
     border-radius: 50%;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .twitter-source:hover {
@@ -615,7 +629,7 @@ section:nth-child(2) {
     height: 100%;
     
     border-radius: 50%;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .facebook-source:hover {
@@ -653,7 +667,7 @@ section:nth-child(2) {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .linkedin-source:hover {
@@ -760,7 +774,7 @@ section:nth-child(2) {
     
     fill: var(--icon-text-grey);
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-logo-link:hover {
@@ -872,7 +886,7 @@ section:nth-child(2) {
     border: 1px solid transparent;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
     
@@ -892,7 +906,7 @@ section:nth-child(2) {
     margin-bottom: 30px;
 }
 
-----------------/* portfolio.css */-------------------
+/* ---------------- portfolio.css------------------- */
 
 .projects-button-list {
     display: flex;
@@ -924,7 +938,7 @@ section:nth-child(2) {
     line-height: 1.6;
     padding: 6px 22px;
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-button:hover {
@@ -982,6 +996,12 @@ section:nth-child(2) {
     position: relative;
     overflow: hidden;
 }
+
+
+
+/* ---------------------modal window------------------ */
+
+
 
 .overlay {
     font-weight: 400;
